# pixelflux

./: .gitignore  MANIFEST.in  README.md  crates.js  help.html  index.html  pyproject.toml  settings.html  setup.py  src-files.js
.devcontainer/: devcontainer.json  install-dependencies.sh
.github/workflows/: docs.yml  pre-release.yml  release.yml
example/: index.html  screen_to_browser.py
pixelflux/: Cargo.toml  __init__.py  all.html  enum.CompositionElements.html  enum.ThreadCommand.html  index.html  screen_capture.pyx  screen_capture_module.cpp  sidebar-items.js  struct.LiveTunables.html  struct.RustCaptureSettings.html  struct.WlEncodeControls.html  struct.WlEncodeStats.html  struct.WlFrame.html  struct.WlFramePool.html  x11_screen_capture.py
pixelflux/computer_use/: fn.encode_png_rgba.html  fn.run_cu_server.html  index.html  sidebar-items.js
pixelflux/encoders/: fn.vbv_bits.html  index.html  sidebar-items.js
pixelflux/encoders/nvenc/: index.html  sidebar-items.js  struct.NvencEncoder.html
pixelflux/encoders/oh264/: index.html  sidebar-items.js  struct.Openh264Encoder.html
pixelflux/encoders/overlay/: enum.WatermarkLocation.html  index.html  sidebar-items.js  struct.OverlayState.html
pixelflux/encoders/software/: constant.MAX_STRIPE_CAPACITY.html  fn.encode_cpu.html  index.html  sidebar-items.js  struct.EncodedStripe.html  struct.H264EncoderWrapper.html  struct.StripeState.html
pixelflux/encoders/vaapi/: index.html  sidebar-items.js  struct.VaapiEncoder.html
pixelflux/nvcodec-sys/: Cargo.toml  build.rs
pixelflux/nvcodec-sys/src/: cuda.rs  lib.rs  nvenc.rs
pixelflux/nvcodec-sys/src/bindgen/: cuda.rs  nvenc.rs
pixelflux/nvgpufilter/: fn.install.html  index.html
pixelflux/pipeline/: fn.decide_hw_fullframe.html  fn.periodic_idr_due.html  index.html  sidebar-items.js  struct.HwFrameDecision.html  struct.X11Pipeline.html
pixelflux/recording_sink/: constant.RECORDING_SOCKET_ENV.html  index.html  sidebar-items.js  struct.RecordingSink.html
pixelflux/src/: computer_use.rs  lib.rs  nvgpufilter.rs  pipeline.rs  recording_sink.rs
pixelflux/src/encoders/: mod.rs  nvenc.rs  oh264.rs  overlay.rs  software.rs  vaapi.rs
pixelflux/src/recorder/: mod.rs  mp4.rs
pixelflux/src/wayland/: cursor.rs  dcclient.rs  frontend.rs  host.rs  keymap.rs  mod.rs  vkclient.rs  wlclient.rs
pixelflux/src/x11/: computer_use.rs  cursor.rs  mod.rs
pixelflux/wayland/: index.html  sidebar-items.js
pixelflux/wayland/cursor/: index.html  struct.Cursor.html
pixelflux/wayland/frontend/: enum.FocusTarget.html  enum.GpuEncoder.html  fn.cursor_icon_to_str.html  fn.next_serial.html  fn.wayland_time.html  fn.wayland_utime.html  index.html  sidebar-items.js  struct.AppState.html  struct.ClientState.html
pixelflux/x11/: fn.run_capture.html  index.html  sidebar-items.js  struct.Controls.html
pixelflux/x11/cursor/: fn.acquire.html  fn.release.html  fn.set_callback.html  fn.set_size_cap.html  fn.shutdown.html  index.html  sidebar-items.js
pixelflux_wayland/: Cargo.toml
pixelflux_wayland/src/: computer_use.rs  lib.rs  recording_sink.rs
pixelflux_wayland/src/encoders/: nvenc.rs  overlay.rs  software.rs  vaapi.rs
pixelflux_wayland/src/wayland/: cursor.rs  frontend.rs
release-notes/: 2.0.0.md
search.index/: 001c2a62c4.js  00e37c9db9.js  00f553f7fc.js  0112d8397f.js  0149f99ebb.js  01509cb44c.js  0172735fa6.js  01a98b2d1a.js  0214af30c3.js  028578bdc2.js  03085cb20d.js  03441ebf2b.js  0346d1e35d.js  043229965e.js  0465a7f6c8.js  04c3da116a.js  054f778cd1.js  056a5f7add.js  059b7e7f8b.js  05cc7ae279.js  05d7ab4ed0.js  06873ccb1b.js  06adaafa97.js  06b6608788.js  070ab34098.js  075c07f529.js  0779ad7149.js  078a911095.js  07a86ed7f1.js  07a979e4bf.js  0846b85dde.js  091e16b5fe.js  0944ce03d0.js  099e33ecbc.js  09abd2f33d.js  09d091c8b9.js  09e5e13246.js  0a1395d740.js  0a32e578ec.js  0a5289fab2.js  (+511 more)
search.index/crateNames/: c2edaea1c7.js
search.index/desc/: 4c9fb3831f.js  dc82cac55c.js  fddacf30f7.js
search.index/entry/: 1dc5b711bf.js  46cdde2bc1.js  81413dace7.js  a7b86e9278.js  b4c8c77881.js
search.index/function/: 108fe35949.js  65865d3e40.js  7c4dec9f02.js  a0597e85bf.js  a5b7976f20.js
search.index/generic_inverted_index/: 63d6d4063d.js  b938b7daf8.js  c34979a85a.js  c4744ec573.js  e50187fcde.js
search.index/name/: 05237667f0.js  72180df15f.js  a34a4f62b5.js  a83edc27af.js  caddf2862a.js
search.index/normalizedName/: 0a9c6fe754.js  40984721e9.js  5168df2df1.js  aca24e8382.js  ba4e675326.js
search.index/path/: 43595cff4d.js  6d08432c4b.js
search.index/type/: 23b3d6f211.js  3863f5e5dc.js  7e5aa6d185.js  c87e656021.js  ce7073e2c6.js
src/: CMakeLists.txt  screen_capture_module.cpp
src/pixelflux/: computer_use.rs.html  lib.rs.html  nvgpufilter.rs.html  pipeline.rs.html  recording_sink.rs.html
src/pixelflux/encoders/: nvenc.rs.html  oh264.rs.html  overlay.rs.html  software.rs.html  vaapi.rs.html
src/pixelflux/wayland/: cursor.rs.html  frontend.rs.html  mod.rs.html
src/pixelflux/x11/: cursor.rs.html  mod.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/smithay/input/: trait.SeatHandler.js
trait.impl/smithay/input/dnd/: trait.DndFocus.js
trait.impl/smithay/input/keyboard/: trait.KeyboardTarget.js
trait.impl/smithay/input/pointer/: trait.PointerTarget.js
trait.impl/smithay/input/touch/: trait.TouchTarget.js
trait.impl/smithay/utils/alive_tracker/: trait.IsAlive.js
trait.impl/smithay/wayland/buffer/: trait.BufferHandler.js
trait.impl/smithay/wayland/shm/: trait.ShmHandler.js
trait.impl/wayland_server/dispatch/: trait.Dispatch.js
trait.impl/wayland_server/global/: trait.GlobalDispatch.js
(+20 files in other folders)
