[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = [ "x86_64", "aarch64" ]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*t-* pp*"

[tool.cibuildwheel.environment]
LD_LIBRARY_PATH = "/usr/local/lib:/usr/local/lib64"
PATH = "$HOME/.cargo/bin:$PATH"

[tool.cibuildwheel.linux]
before-all = """
    set -euxo pipefail
    
    # --- MANYLINUX (RPM-based) ---
    # x264 is built from source for x264-sys (manylinux has no usable package);
    # ffmpeg n8.1 is built plain LGPL (no --enable-libx264/--enable-gpl: only
    # avcodec/avfilter/avutil are consumed, for h264_vaapi) — any FFmpeg
    # 6.0..8.1 satisfies the crate, so distro packages work where they exist.
    # libjpeg-turbo is NOT built: turbojpeg-sys vendors + statically links its
    # own copy by default (cmake + nasm above are what it needs).
    if command -v dnf; then
        dnf localinstall -y --nogpgcheck https://download1.rpmfusion.org/free/el/rpmfusion-free-release-$(rpm -E %rhel).noarch.rpm && \
        dnf localinstall -y --nogpgcheck https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-$(rpm -E %rhel).noarch.rpm && \
        dnf localinstall -y --nogpgcheck https://dl.fedoraproject.org/pub/epel/epel-release-latest-$(rpm -E %rhel).noarch.rpm && \
        dnf install -y \
            curl \
            clang \
            pixman-devel \
            libX11-devel \
            libXext-devel \
            libva-devel \
            libdrm-devel \
            libinput-devel \
            libxkbcommon-devel \
            mesa-libgbm-devel \
            wayland-devel \
            systemd-devel \
            git \
            make \
            gcc \
            nasm \
            cmake \
            gcc-c++ && \
        \
        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal && \
        \
        (cd /tmp && \
            git clone --branch stable --depth 1 https://code.videolan.org/videolan/x264.git && \
            cd x264 && \
            ./configure --prefix=/usr/local --enable-shared --disable-cli && \
            make -j$(nproc) && \
            make install) && \
        \
        (cd /tmp && \
            git clone --branch n8.1 --depth 1 https://git.ffmpeg.org/ffmpeg.git && \
            cd ffmpeg && \
            ./configure \
                --prefix=/usr/local \
                --enable-shared \
                --disable-static \
                --disable-programs && \
            make -j$(nproc) && \
            make install) && \
        \
        ldconfig

    # --- ALPINE (APK-based) ---
    # NOTE: ffmpeg-dev must be 6.0..8.1 (ffmpeg-sys-next probes the system
    # FFmpeg and supports up to the release the crate version is named after;
    # bump the crate before targeting a newer FFmpeg). libjpeg-turbo is NOT a
    # system dep: turbojpeg-sys builds its vendored copy (needs cmake + nasm).
    elif command -v apk; then
        apk add --no-cache \
            build-base \
            clang \
            rust \
            cargo \
            clang20-libclang \
            cmake \
            nasm \
            pixman-dev \
            libx11-dev \
            libxext-dev \
            libxfixes-dev \
            x264-dev \
            libva-dev \
            libdrm-dev \
            libinput-dev \
            libxkbcommon-dev \
            mesa-dev \
            wayland-dev \
            eudev-dev \
            musl-dev \
            ffmpeg-dev
    else
        echo "Unsupported package manager"
        exit 1
    fi
"""

repair-wheel-command = """
    auditwheel repair -w {dest_dir} {wheel} \
    --exclude libva.so.2 \
    --exclude libva-drm.so.2 \
    --exclude libva-x11.so.2 \
    --exclude libdrm.so.2 \
    --exclude libgbm.so.1 \
    --exclude libEGL.so.1 \
    --exclude libgobject-2.0.so.0 \
    --exclude libglib-2.0.so.0 \
    --exclude libgmodule-2.0.so.0 \
    --exclude libffi.so.6 \
    --exclude libffi.so.7 \
    --exclude libffi.so.8 \
    --exclude libxkbcommon.so.0 \
    --exclude libpixman-1.so.0 \
    --exclude liblzma.so.5 \
    --exclude libz.so.1 \
    --exclude libstdc++.so.6 \
    --exclude libgcc_s.so.1 \
    --exclude libX11.so.6 \
    --exclude libXext.so.6 \
    --exclude libXfixes.so.3 \
    --exclude libxcb.so.1 \
    --exclude libxcb-dri3.so.0 \
    --exclude libxcb-shm.so.0 \
    --exclude libxcb-render.so.0
"""
