[package]
name = "pixelflux"
version = "2.0.0"
edition = "2021"

[lib]
name = "pixelflux"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
wayland-server = { version = "0.31.10", features = ["dlopen"] }
wayland-protocols = { version = "0.31", features = ["server"] }
crossbeam-channel = "0.5"
calloop = "0.12"
turbojpeg = "1.3" 
rayon = "1.10"
x264-sys = "0.2.2"
# BSD-licensed Cisco OpenH264 as an alternative software H.264 encoder; builds the
# vendored C source (needs a C toolchain + nasm), no runtime download. openh264-sys2
# is used for the raw set_option live-bitrate path the safe wrapper doesn't expose.
openh264 = "0.8"
openh264-sys2 = "0.8"
libc = "0.2"
# fast_mode enables YuvConversionMode::Fast: empirically 1.23x faster than libyuv ARGBToI420
# on x86-64-v3 (AVX2) at <=1 LSB error vs a float BT.709 reference (accuracy preserved).
yuv = { version = "0.8.9", features = ["fast_mode"] }
gbm = "0.14" 
libloading = "0.8"
xcursor = "0.3.1"
# X11 host capture (replaces the C++ XShm/XFixes path): shm = XShm zero-copy grab,
# xfixes = hardware cursor image. Pure-Rust XCB; links the system libxcb.
x11rb = { version = "0.13", features = ["shm", "xfixes"] }
image = "=0.25.9"
# The crate's build.rs probes the FFmpeg found via pkg-config and emits
# per-version cfgs; one crate version supports FFmpeg 3.0 UP TO the release it
# is named after (8.1.0 = "at most 8.1", not "exactly 8.1"). The VAAPI encoder
# here uses 5.1-era API only, so any system FFmpeg 6.x-8.1 builds; bump the
# crate when targeting a newer FFmpeg release. Only avcodec+avfilter are used
# (avutil is implicit), so the default avformat/avdevice/swscale/swresample
# components — and their dev packages — are not required.
ffmpeg-sys-next = { version = "8.1", default-features = false, features = ["avcodec", "avfilter"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[dependencies.nvcodec-sys]
path = "nvcodec-sys"
features = ["cuda"]

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "ca932e042fa9ad150605c150a86275b85f9ad5b3"
default-features = false
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "renderer_gl", 
    "renderer_pixman",
    "use_system_lib",
    "desktop",
    "wayland_frontend",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
